i386/gcc didnt work. try with amd64/ubuntu image now...

--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -3,7 +3,7 @@ services:
     # build:
     #   context: .
     #   target: dev-envs
-    image: i386/gcc
+    image: amd64/ubuntu
     tty: true
     container_name: cs143-compiler
     volumes:
