--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # vscode stuff
 .vscode
+*.o
 
 # assignments (files which are modified)
 class/*
@@ -21,3 +22,9 @@ class/assignments/PA2/*
 !class/assignments/PA2/*.flex
 !class/assignments/PA2/README
 !class/assignments/PA2/test*.cl
+
+# assignment 3
+!class/assignments/PA3
+class/assignments/PA3/*
+!class/assignments/PA3/*.y
+!class/assignments/PA3/*.aps
